--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -126,45 +126,45 @@ jobs:
             \`\`\`json
             ${{ steps.tf-output.outputs.output }}
             \`\`\`
-# # ----------------------------------------
-#   # Stage 4: Continuous Post-Deployment Testing
-#   # ----------------------------------------
-#   post_deploy_test:
-#     name: Post-Deploy Verification
-#     runs-on: ubuntu-latest
-#     needs: deploy
+# ----------------------------------------
+  # Stage 4: Continuous Post-Deployment Testing
+  # ----------------------------------------
+  post_deploy_test:
+    name: Post-Deploy Verification
+    runs-on: ubuntu-latest
+    needs: deploy
 
-#     steps:
-#       - name: Checkout code
-#         uses: actions/checkout@v4
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-#       - name: Setup Terraform
-#         uses: hashicorp/setup-terraform@v2
-#         with:
-#           terraform_version: 1.5.7
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v2
+        with:
+          terraform_version: 1.5.7
 
-#       - name: Configure AWS Credentials
-#         uses: aws-actions/configure-aws-credentials@v2
-#         with:
-#           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-#           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-#           aws-region: us-east-1
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
 
-#       - name: Terraform Init
-#         run: terraform init
+      - name: Terraform Init
+        run: terraform init
 
-#       - name: Get Instance Public IP
-#         id: ip
-#         run: |
-#           IP=$(terraform output -raw instance_public_ip)
-#           echo "public_ip=$IP" >> "$GITHUB_OUTPUT"
+      - name: Get Instance Public IP
+        id: ip
+        run: |
+          IP=$(terraform output -raw instance_public_ip)
+          echo "public_ip=$IP" >> "$GITHUB_OUTPUT"
 
-#       - name: Verify SSH Port Open
-#         run: |
-#           echo "Checking SSH (port 22) on ${PUBLIC_IP}..."
-#           nc -zv ${{ steps.ip.outputs.public_ip }} 22 || echo "⚠️ Port 22 is closed or unreachable."
+      - name: Verify SSH Port Open
+        run: |
+          echo "Checking SSH (port 22) on ${PUBLIC_IP}..."
+          nc -zv ${{ steps.ip.outputs.public_ip }} 22 || echo "⚠️ Port 22 is closed or unreachable."
 
-#       - name: Test HTTP response (if web server deployed)
-#         run: |
-#           echo "Attempting HTTP GET on ${PUBLIC_IP}..."
-#           curl -I --connect-timeout 5 http://${{ steps.ip.outputs.public_ip }} || echo "⚠️ HTTP service unavailable."
+      - name: Test HTTP response (if web server deployed)
+        run: |
+          echo "Attempting HTTP GET on ${PUBLIC_IP}..."
+          curl -I --connect-timeout 5 http://${{ steps.ip.outputs.public_ip }} || echo "⚠️ HTTP service unavailable."
