--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,7 +12,7 @@ on:
       branch:
         description: "Select the branch to run this workflow on"
         required: false
-        default: "master"
+        default: "main"
         type: choice
         options:
           - main
