--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -100,7 +100,7 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
-          role-to-assume: arn:aws:iam::891711635596:role/EC2SSMRole
+          role-to-assume: arn:aws:iam::891711635596:role/Account-IAM-Role
           role-duration-seconds: 3600
           role-session-name: GitHubActions
 
