--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,5 +1,9 @@
 # This is a workflow for GitHub Actions
 
+
+# ─────────────────────────────
+# GitHub Actions: CI Pipeline
+# ─────────────────────────────
 name: CI Pipeline
 
 on:
@@ -19,12 +23,12 @@ on:
           - dev
           - staging
           - feature
-          - testing
 
 jobs:
-  # ----------------------------------------
-  # Stage 1: Continuous Download / Checkout
-  # ----------------------------------------
+
+  # ─────────────────────────────
+  # Build Job
+  # ─────────────────────────────
   build:
     name: Build
     runs-on: ubuntu-latest
@@ -39,11 +43,11 @@ jobs:
           echo "Starting build..."
           echo "Simulating build for ${{ github.event.inputs.branch || github.ref_name }}"
 
-  # ----------------------------------------
-  # Stage 2: Continuous Testing and Scanning
-  # ----------------------------------------
+  # ─────────────────────────────
+  # Test Job
+  # ─────────────────────────────
   test:
-    name: Test and Scan
+    name: Test
     runs-on: ubuntu-latest
     needs: build
     steps:
@@ -63,22 +67,9 @@ jobs:
       - name: Terraform Validate
         run: terraform validate
 
-      - name: Install tflint
-        run: |
-          curl -s https://raw.githubusercontent.com/terraform-linters/tflint/master/install_linux.sh | bash
-
-      - name: Run tflint
-        run: tflint --init && tflint || true
-
-      - name: Install Checkov
-        run: pip install checkov
-
-      - name: Run Checkov (Security Scanner)
-        run: checkov -d . || true
-
-  # ----------------------------------------
-  # Stage 3: Continuous Deployment (apply)
-  # ----------------------------------------
+  # ─────────────────────────────
+  # Deploy Job
+  # ─────────────────────────────
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
@@ -87,49 +78,162 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
-          ref: ${{ github.event.inputs.branch || github.ref_name }}    
+          ref: ${{ github.event.inputs.branch || github.ref_name }}
 
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v2
-        with:
-          terraform_version: 1.5.7
-
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v3
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1
-          role-to-assume: arn:aws:iam::891711635596:role/Account-IAM-Role
-          role-duration-seconds: 3600
-          role-session-name: GitHubActions-${{ github.run_id }}  # Added run_id for uniqueness
-          role-skip-session-tagging: true  # Often needed when chaining roles
-
-      - name: Terraform Init
-        run: terraform init
-
-      - name: Terraform Apply
-        run: terraform apply -auto-approve
-
-      - name: Capture Terraform Output
-        id: tf-output
+      - name: Deploy Step
         run: |
-          terraform output -json > tf_outputs.json
-          echo "Terraform Outputs:"
-          cat tf_outputs.json
+          echo "Deploying application from ${{ github.event.inputs.branch || github.ref_name }}"
+          # terraform apply -auto-approve or AWS CLI logic here
 
-      - name: Comment Terraform Output on PR
-        if: github.event_name == 'pull_request'
-        uses: marocchino/sticky-pull-request-comment@v2
+  # ─────────────────────────────
+  # Post-Deployment Job
+  # ─────────────────────────────
+  post-deploy:
+    name: Post Deployment
+    runs-on: ubuntu-latest
+    needs: deploy
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          header: terraform-output
-          message: |
-            ## ✅ Terraform Apply Output
+          ref: ${{ github.event.inputs.branch || github.ref_name }}
 
-            \`\`\`json
-            ${{ steps.tf-output.outputs.output }}
-            \`\`\`
+      - name: Post-Deployment Step
+        run: |
+          echo "Running post-deployment tasks for ${{ github.event.inputs.branch || github.ref_name }}"
+          # Example: notify Slack, tag repo, run health checks, etc.
+
+
+# name: CI Pipeline
+
+# on:
+#   push:
+#     branches: [ "master" ]
+#   pull_request:
+#     branches: [ "master" ]
+#   workflow_dispatch:
+#     inputs:
+#       branch:
+#         description: "Select the branch to run this workflow on"
+#         required: false
+#         default: "master"
+#         type: choice
+#         options:
+#           - main
+#           - dev
+#           - staging
+#           - feature
+#           - testing
+
+# jobs:
+#   # ----------------------------------------
+#   # Stage 1: Continuous Download / Checkout
+#   # ----------------------------------------
+#   build:
+#     name: Build
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Checkout code
+#         uses: actions/checkout@v4
+#         with:
+#           ref: ${{ github.event.inputs.branch || github.ref_name }}
+
+#       - name: Build Step
+#         run: |
+#           echo "Starting build..."
+#           echo "Simulating build for ${{ github.event.inputs.branch || github.ref_name }}"
+
+#   # ----------------------------------------
+#   # Stage 2: Continuous Testing and Scanning
+#   # ----------------------------------------
+#   test:
+#     name: Test and Scan
+#     runs-on: ubuntu-latest
+#     needs: build
+#     steps:
+#       - name: Checkout code
+#         uses: actions/checkout@v4
+#         with:
+#           ref: ${{ github.event.inputs.branch || github.ref_name }}
+
+#       - name: Setup Terraform
+#         uses: hashicorp/setup-terraform@v2
+#         with:
+#           terraform_version: 1.5.7
+
+#       - name: Terraform Init
+#         run: terraform init
+
+#       - name: Terraform Validate
+#         run: terraform validate
+
+#       - name: Install tflint
+#         run: |
+#           curl -s https://raw.githubusercontent.com/terraform-linters/tflint/master/install_linux.sh | bash
+
+#       - name: Run tflint
+#         run: tflint --init && tflint || true
+
+#       - name: Install Checkov
+#         run: pip install checkov
+
+#       - name: Run Checkov (Security Scanner)
+#         run: checkov -d . || true
+
+#   # ----------------------------------------
+#   # Stage 3: Continuous Deployment (apply)
+#   # ----------------------------------------
+#   deploy:
+#     name: Deploy
+#     runs-on: ubuntu-latest
+#     needs: test
+#     steps:
+#       - name: Checkout code
+#         uses: actions/checkout@v4
+#         with:
+#           ref: ${{ github.event.inputs.branch || github.ref_name }}    
+
+#       - name: Setup Terraform
+#         uses: hashicorp/setup-terraform@v2
+#         with:
+#           terraform_version: 1.5.7
+
+#       - name: Configure AWS Credentials
+#         uses: aws-actions/configure-aws-credentials@v3
+#         with:
+#           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+#           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+#           aws-region: us-east-1
+#           role-to-assume: arn:aws:iam::891711635596:role/Account-IAM-Role
+#           role-duration-seconds: 3600
+#           role-session-name: GitHubActions-${{ github.run_id }}  # Added run_id for uniqueness
+#           role-skip-session-tagging: true  # Often needed when chaining roles
+
+#       - name: Terraform Init
+#         run: terraform init
+
+#       - name: Terraform Apply
+#         run: terraform apply -auto-approve
+
+#       - name: Capture Terraform Output
+#         id: tf-output
+#         run: |
+#           terraform output -json > tf_outputs.json
+#           echo "Terraform Outputs:"
+#           cat tf_outputs.json
+
+#       - name: Comment Terraform Output on PR
+#         if: github.event_name == 'pull_request'
+#         uses: marocchino/sticky-pull-request-comment@v2
+#         with:
+#           token: ${{ secrets.GITHUB_TOKEN }}
+#           header: terraform-output
+#           message: |
+#             ## ✅ Terraform Apply Output
+
+#             \`\`\`json
+#             ${{ steps.tf-output.outputs.output }}
+#             \`\`\`
 # # ----------------------------------------
 #   # Stage 4: Continuous Post-Deployment Testing
 #   # ----------------------------------------
