--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,9 +1,6 @@
 # This is a workflow for GitHub Actions
 
 
-# ─────────────────────────────
-# GitHub Actions: CI Pipeline
-# ─────────────────────────────
 name: CI Pipeline
 
 on:
@@ -26,11 +23,9 @@ on:
 
 jobs:
 
-  # ─────────────────────────────
-  # Build Job
-  # ─────────────────────────────
-  build:
-    name: Build
+  # Stage 1: Continuous Download / Checkout
+  checkout:
+    name: Checkout Source Code
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -38,18 +33,11 @@ jobs:
         with:
           ref: ${{ github.event.inputs.branch || github.ref_name }}
 
-      - name: Build Step
-        run: |
-          echo "Starting build..."
-          echo "Simulating build for ${{ github.event.inputs.branch || github.ref_name }}"
-
-  # ─────────────────────────────
-  # Test Job
-  # ─────────────────────────────
-  test:
-    name: Test
+  # Stage 2: Continuous Testing and Scanning
+  test-scan:
+    name: Test and Scan
     runs-on: ubuntu-latest
-    needs: build
+    needs: checkout
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -67,29 +55,29 @@ jobs:
       - name: Terraform Validate
         run: terraform validate
 
-  # ─────────────────────────────
-  # Deploy Job
-  # ─────────────────────────────
+      - name: Terraform Format Check
+        run: terraform fmt -check
+
+      - name: Static Code Analysis with TFSec
+        uses: aquasecurity/tfsec-action@v1.0.0
+
+  # Stage 3: Continuous Deployment (apply)
   deploy:
-    name: Deploy
+    name: Deploy Infrastructure
     runs-on: ubuntu-latest
-    needs: test
+    needs: test-scan
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
           ref: ${{ github.event.inputs.branch || github.ref_name }}
 
-      - name: Deploy Step
-        run: |
-          echo "Deploying application from ${{ github.event.inputs.branch || github.ref_name }}"
-          # terraform apply -auto-approve or AWS CLI logic here
+      - name: Terraform Apply
+        run: terraform apply -auto-approve
 
-  # ─────────────────────────────
-  # Post-Deployment Job
-  # ─────────────────────────────
+  # Stage 4: Continuous Post-Deployment Testing
   post-deploy:
-    name: Post Deployment
+    name: Post-Deployment Testing
     runs-on: ubuntu-latest
     needs: deploy
     steps:
@@ -98,10 +86,120 @@ jobs:
         with:
           ref: ${{ github.event.inputs.branch || github.ref_name }}
 
-      - name: Post-Deployment Step
+      - name: Run Post-Deployment Health Checks
         run: |
-          echo "Running post-deployment tasks for ${{ github.event.inputs.branch || github.ref_name }}"
-          # Example: notify Slack, tag repo, run health checks, etc.
+          echo "Running post-deployment tests..."
+          # Example: curl endpoint test
+          # curl https://your-instance-public-ip/health || exit 1
+
+      - name: Notify Deployment Success
+        run: |
+          echo "Deployment of ${{ github.event.inputs.branch || github.ref_name }} completed successfully."
+          # Slack/Teams/Email integration here
+
+
+
+# # ─────────────────────────────
+# # GitHub Actions: CI Pipeline
+# # ─────────────────────────────
+# name: CI Pipeline
+
+# on:
+#   push:
+#     branches: [ "master" ]
+#   pull_request:
+#     branches: [ "master" ]
+#   workflow_dispatch:
+#     inputs:
+#       branch:
+#         description: "Select the branch to run this workflow on"
+#         required: false
+#         default: "master"
+#         type: choice
+#         options:
+#           - main
+#           - dev
+#           - staging
+#           - feature
+
+# jobs:
+
+#   # ─────────────────────────────
+#   # Build Job
+#   # ─────────────────────────────
+#   build:
+#     name: Build
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Checkout code
+#         uses: actions/checkout@v4
+#         with:
+#           ref: ${{ github.event.inputs.branch || github.ref_name }}
+
+#       - name: Build Step
+#         run: |
+#           echo "Starting build..."
+#           echo "Simulating build for ${{ github.event.inputs.branch || github.ref_name }}"
+
+#   # ─────────────────────────────
+#   # Test Job
+#   # ─────────────────────────────
+#   test:
+#     name: Test
+#     runs-on: ubuntu-latest
+#     needs: build
+#     steps:
+#       - name: Checkout code
+#         uses: actions/checkout@v4
+#         with:
+#           ref: ${{ github.event.inputs.branch || github.ref_name }}
+
+#       - name: Setup Terraform
+#         uses: hashicorp/setup-terraform@v2
+#         with:
+#           terraform_version: 1.5.7
+
+#       - name: Terraform Init
+#         run: terraform init
+
+#       - name: Terraform Validate
+#         run: terraform validate
+
+#   # ─────────────────────────────
+#   # Continous Deployment Job
+#   # ─────────────────────────────
+#   deploy:
+#     name: Deploy
+#     runs-on: ubuntu-latest
+#     needs: test
+#     steps:
+#       - name: Checkout code
+#         uses: actions/checkout@v4
+#         with:
+#           ref: ${{ github.event.inputs.branch || github.ref_name }}
+
+#       - name: Deploy Step
+#         run: |
+#           echo "Deploying application from ${{ github.event.inputs.branch || github.ref_name }}"
+#           # terraform apply -auto-approve or AWS CLI logic here
+
+#   # ─────────────────────────────
+#   # Post-Deployment Job
+#   # ─────────────────────────────
+#   post-deploy:
+#     name: Post Deployment
+#     runs-on: ubuntu-latest
+#     needs: deploy
+#     steps:
+#       - name: Checkout code
+#         uses: actions/checkout@v4
+#         with:
+#           ref: ${{ github.event.inputs.branch || github.ref_name }}
+
+#       - name: Post-Deployment Step
+#         run: |
+#           echo "Running post-deployment tasks for ${{ github.event.inputs.branch || github.ref_name }}"
+#           # Example: notify Slack, tag repo, run health checks, etc.
 
 
 # name: CI Pipeline
