--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,6 +1,5 @@
 # This is a workflow for GitHub Actions
 
-
 name: CI Pipeline
 
 on:
@@ -56,7 +55,7 @@ jobs:
         run: terraform validate
 
       - name: Terraform Auto Format
-        run: terraform fmt -recuresive
+        run: terraform fmt -recursive
 
       - name: Static Code Analysis with TFSec
         uses: aquasecurity/tfsec-action@v1.0.0
@@ -96,6 +95,104 @@ jobs:
         run: |
           echo "Deployment of ${{ github.event.inputs.branch || github.ref_name }} completed successfully."
           # Slack/Teams/Email integration here
+
+
+
+# name: CI Pipeline
+
+# on:
+#   push:
+#     branches: [ "master" ]
+#   pull_request:
+#     branches: [ "master" ]
+#   workflow_dispatch:
+#     inputs:
+#       branch:
+#         description: "Select the branch to run this workflow on"
+#         required: false
+#         default: "master"
+#         type: choice
+#         options:
+#           - main
+#           - dev
+#           - staging
+#           - feature
+
+# jobs:
+
+#   # Stage 1: Continuous Download / Checkout
+#   checkout:
+#     name: Checkout Source Code
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Checkout code
+#         uses: actions/checkout@v4
+#         with:
+#           ref: ${{ github.event.inputs.branch || github.ref_name }}
+
+#   # Stage 2: Continuous Testing and Scanning
+#   test-scan:
+#     name: Test and Scan
+#     runs-on: ubuntu-latest
+#     needs: checkout
+#     steps:
+#       - name: Checkout code
+#         uses: actions/checkout@v4
+#         with:
+#           ref: ${{ github.event.inputs.branch || github.ref_name }}
+
+#       - name: Setup Terraform
+#         uses: hashicorp/setup-terraform@v2
+#         with:
+#           terraform_version: 1.5.7
+
+#       - name: Terraform Init
+#         run: terraform init
+
+#       - name: Terraform Validate
+#         run: terraform validate
+
+#       - name: Terraform Auto Format
+#         run: terraform fmt -recuresive
+
+#       - name: Static Code Analysis with TFSec
+#         uses: aquasecurity/tfsec-action@v1.0.0
+
+#   # Stage 3: Continuous Deployment (apply)
+#   deploy:
+#     name: Deploy Infrastructure
+#     runs-on: ubuntu-latest
+#     needs: test-scan
+#     steps:
+#       - name: Checkout code
+#         uses: actions/checkout@v4
+#         with:
+#           ref: ${{ github.event.inputs.branch || github.ref_name }}
+
+#       - name: Terraform Apply
+#         run: terraform apply -auto-approve
+
+#   # Stage 4: Continuous Post-Deployment Testing
+#   post-deploy:
+#     name: Post-Deployment Testing
+#     runs-on: ubuntu-latest
+#     needs: deploy
+#     steps:
+#       - name: Checkout code
+#         uses: actions/checkout@v4
+#         with:
+#           ref: ${{ github.event.inputs.branch || github.ref_name }}
+
+#       - name: Run Post-Deployment Health Checks
+#         run: |
+#           echo "Running post-deployment tests..."
+#           # Example: curl endpoint test
+#           # curl https://your-instance-public-ip/health || exit 1
+
+#       - name: Notify Deployment Success
+#         run: |
+#           echo "Deployment of ${{ github.event.inputs.branch || github.ref_name }} completed successfully."
+#           # Slack/Teams/Email integration here
 
 
 
