--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,10 +21,8 @@ on:
           - feature
 
 jobs:
-
-  # Stage 1: Continuous Download / Checkout
-  checkout:
-    name: Checkout Source Code
+  build:
+    name: Build
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -32,11 +30,15 @@ jobs:
         with:
           ref: ${{ github.event.inputs.branch || github.ref_name }}
 
-  # Stage 2: Continuous Testing and Scanning
-  test-scan:
-    name: Test and Scan
+      - name: Build Step
+        run: |
+          echo "Starting build..."
+          echo "Simulating build for ${{ github.event.inputs.branch || github.ref_name }}"
+
+  test:
+    name: Test
     runs-on: ubuntu-latest
-    needs: checkout
+    needs: build
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -54,47 +56,21 @@ jobs:
       - name: Terraform Validate
         run: terraform validate
 
-      - name: Terraform Auto Format
-        run: terraform fmt -recuresive
-
-      - name: Static Code Analysis with TFSec
-        uses: aquasecurity/tfsec-action@v1.0.0
-
-  # Stage 3: Continuous Deployment (apply)
   deploy:
-    name: Deploy Infrastructure
+    name: Deploy
     runs-on: ubuntu-latest
-    needs: test-scan
+    needs: test
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
           ref: ${{ github.event.inputs.branch || github.ref_name }}
 
-      - name: Terraform Apply
-        run: terraform apply -auto-approve
-
-  # Stage 4: Continuous Post-Deployment Testing
-  post-deploy:
-    name: Post-Deployment Testing
-    runs-on: ubuntu-latest
-    needs: deploy
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-        with:
-          ref: ${{ github.event.inputs.branch || github.ref_name }}
-
-      - name: Run Post-Deployment Health Checks
+      - name: Deploy Step
         run: |
-          echo "Running post-deployment tests..."
-          # Example: curl endpoint test
-          # curl https://your-instance-public-ip/health || exit 1
+          echo "Deploying application from ${{ github.event.inputs.branch || github.ref_name }}"
+          # Add Terraform apply or AWS CLI logic here
 
-      - name: Notify Deployment Success
-        run: |
-          echo "Deployment of ${{ github.event.inputs.branch || github.ref_name }} completed successfully."
-          # Slack/Teams/Email integration here
 
 
 
