--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -53,8 +53,17 @@ jobs:
       - name: Terraform Init
         run: terraform init
 
+      - name: Terraform Apply
+        run: terraform apply -auto-approve
+
       - name: Terraform Validate
         run: terraform validate
+
+      - name: Terraform Auto Format
+        run: terraform fmt -recursive
+
+      - name: Static Code Analysis with TFSec
+        uses: aquasecurity/tfsec-action@v1.0.0
 
   deploy:
     name: Deploy
@@ -71,22 +80,6 @@ jobs:
           echo "Deploying application from ${{ github.event.inputs.branch || github.ref_name }}"
           # Add Terraform apply or AWS CLI logic here
      
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v2
-        with:
-          terraform_version: 1.5.7
-
-      - name: Terraform Init
-        run: terraform init
-
-      - name: Terraform Validate
-        run: terraform validate
-
-      - name: Terraform Auto Format
-        run: terraform fmt -recursive
-
-      - name: Static Code Analysis with TFSec
-        uses: aquasecurity/tfsec-action@v1.0.0
 # # ─────────────────────────────
 # # GitHub Actions: CI Pipeline
 # # ─────────────────────────────
