--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -79,6 +79,13 @@ jobs:
         run: |
           echo "Deploying application from ${{ github.event.inputs.branch || github.ref_name }}"
           # Add Terraform apply or AWS CLI logic here
+
+      - name: Terraform Apply with var.vpc_id
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        run: terraform apply -auto-approve -var="vpc_id=${{ github.event.inputs.vpc_id }}"
+
      
 # # ─────────────────────────────
 # # GitHub Actions: CI Pipeline
