--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,5 +1,8 @@
 # This is a workflow for GitHub Actions
 
+# ─────────────────────────────
+# GitHub Actions: CI Pipeline
+# ─────────────────────────────
 name: CI Pipeline
 
 on:
@@ -21,6 +24,10 @@ on:
           - feature
 
 jobs:
+
+  # ─────────────────────────────
+  # Build Job
+  # ─────────────────────────────
   build:
     name: Build
     runs-on: ubuntu-latest
@@ -35,6 +42,9 @@ jobs:
           echo "Starting build..."
           echo "Simulating build for ${{ github.event.inputs.branch || github.ref_name }}"
 
+  # ─────────────────────────────
+  # Test Job
+  # ─────────────────────────────
   test:
     name: Test
     runs-on: ubuntu-latest
@@ -53,18 +63,12 @@ jobs:
       - name: Terraform Init
         run: terraform init
 
-      - name: Terraform Apply
-        run: terraform apply -auto-approve -var="vpc_id=${{ github.event.inputs.vpc_id }}"
-
       - name: Terraform Validate
         run: terraform validate
 
-      - name: Terraform Auto Format
-        run: terraform fmt -recursive
-
-      - name: Static Code Analysis with TFSec
-        uses: aquasecurity/tfsec-action@v1.0.0
-
+  # ─────────────────────────────
+  # Continous Deployment Job
+  # ─────────────────────────────
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
@@ -78,116 +82,25 @@ jobs:
       - name: Deploy Step
         run: |
           echo "Deploying application from ${{ github.event.inputs.branch || github.ref_name }}"
-          # Add Terraform apply or AWS CLI logic here
+          # terraform apply -auto-approve or AWS CLI logic here
 
-      - name: Terraform Apply with var.vpc_id
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        run: terraform apply -auto-approve -var="vpc_id=${{ github.event.inputs.vpc_id }}"
+  # ─────────────────────────────
+  # Post-Deployment Job
+  # ─────────────────────────────
+  post-deploy:
+    name: Post Deployment
+    runs-on: ubuntu-latest
+    needs: deploy
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          ref: ${{ github.event.inputs.branch || github.ref_name }}
 
-     
-# # ─────────────────────────────
-# # GitHub Actions: CI Pipeline
-# # ─────────────────────────────
-# name: CI Pipeline
-
-# on:
-#   push:
-#     branches: [ "master" ]
-#   pull_request:
-#     branches: [ "master" ]
-#   workflow_dispatch:
-#     inputs:
-#       branch:
-#         description: "Select the branch to run this workflow on"
-#         required: false
-#         default: "master"
-#         type: choice
-#         options:
-#           - main
-#           - dev
-#           - staging
-#           - feature
-
-# jobs:
-
-#   # ─────────────────────────────
-#   # Build Job
-#   # ─────────────────────────────
-#   build:
-#     name: Build
-#     runs-on: ubuntu-latest
-#     steps:
-#       - name: Checkout code
-#         uses: actions/checkout@v4
-#         with:
-#           ref: ${{ github.event.inputs.branch || github.ref_name }}
-
-#       - name: Build Step
-#         run: |
-#           echo "Starting build..."
-#           echo "Simulating build for ${{ github.event.inputs.branch || github.ref_name }}"
-
-#   # ─────────────────────────────
-#   # Test Job
-#   # ─────────────────────────────
-#   test:
-#     name: Test
-#     runs-on: ubuntu-latest
-#     needs: build
-#     steps:
-#       - name: Checkout code
-#         uses: actions/checkout@v4
-#         with:
-#           ref: ${{ github.event.inputs.branch || github.ref_name }}
-
-#       - name: Setup Terraform
-#         uses: hashicorp/setup-terraform@v2
-#         with:
-#           terraform_version: 1.5.7
-
-#       - name: Terraform Init
-#         run: terraform init
-
-#       - name: Terraform Validate
-#         run: terraform validate
-
-#   # ─────────────────────────────
-#   # Continous Deployment Job
-#   # ─────────────────────────────
-#   deploy:
-#     name: Deploy
-#     runs-on: ubuntu-latest
-#     needs: test
-#     steps:
-#       - name: Checkout code
-#         uses: actions/checkout@v4
-#         with:
-#           ref: ${{ github.event.inputs.branch || github.ref_name }}
-
-#       - name: Deploy Step
-#         run: |
-#           echo "Deploying application from ${{ github.event.inputs.branch || github.ref_name }}"
-#           # terraform apply -auto-approve or AWS CLI logic here
-
-#   # ─────────────────────────────
-#   # Post-Deployment Job
-#   # ─────────────────────────────
-#   post-deploy:
-#     name: Post Deployment
-#     runs-on: ubuntu-latest
-#     needs: deploy
-#     steps:
-#       - name: Checkout code
-#         uses: actions/checkout@v4
-#         with:
-#           ref: ${{ github.event.inputs.branch || github.ref_name }}
-
-#       - name: Post-Deployment Step
-#         run: |
-#           echo "Running post-deployment tasks for ${{ github.event.inputs.branch || github.ref_name }}"
-#           # Example: notify Slack, tag repo, run health checks, etc.
+      - name: Post-Deployment Step
+        run: |
+          echo "Running post-deployment tasks for ${{ github.event.inputs.branch || github.ref_name }}"
+          # Example: notify Slack, tag repo, run health checks, etc.
 
 
 # name: CI Pipeline
