--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ on:
 jobs:
 
   # ─────────────────────────────
-  # Build Job
+  # Step 1: Build Job
   # ─────────────────────────────
   build:
     name: Build
@@ -43,7 +43,7 @@ jobs:
           echo "Simulating build for ${{ github.event.inputs.branch || github.ref_name }}"
 
   # ─────────────────────────────
-  # Test Job
+  #  Step 2: Test Job
   # ─────────────────────────────
   test:
     name: Test
@@ -67,10 +67,10 @@ jobs:
         run: terraform validate
 
   # ─────────────────────────────
-  # Continous Deployment Job
+  #  Step 3: Continous Deployment Job
   # ─────────────────────────────
   deploy:
-    name: Deploy
+    name: Continous Deployment
     runs-on: ubuntu-latest
     needs: test
     steps:
@@ -85,7 +85,7 @@ jobs:
           # terraform apply -auto-approve or AWS CLI logic here
 
   # ─────────────────────────────
-  # Post-Deployment Job
+  #  Step 4: Post-Deployment Job
   # ─────────────────────────────
   post-deploy:
     name: Post Deployment
