--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -66,6 +66,9 @@ jobs:
       - name: Terraform Validate
         run: terraform validate
 
+      - name: Terraform Apply
+        run: terraform apply -auto-approve
+
   # ─────────────────────────────
   #  Step 3: Continous Deployment Job
   # ─────────────────────────────
