--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -83,6 +83,12 @@ jobs:
         run: |
           echo "Deploying application from ${{ github.event.inputs.branch || github.ref_name }}"
           # terraform apply -auto-approve or AWS CLI logic here
+
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v2
+        with:
+          terraform_version: 1.5.7
+
       - name: Terraform Apply
         run: terraform apply -auto-approve
 
