--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -106,14 +106,14 @@ jobs:
           sudo ./aws/install --update
           aws --version
 
-      - name: Configure AWS CLI Credentials
-        run: |
-          aws configure set aws_access_key_id ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws configure set aws_secret_access_key ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws configure set default.region us-east-1
+      # - name: Configure AWS CLI Credentials
+      #   run: |
+      #     aws configure set aws_access_key_id ${{ secrets.AWS_ACCESS_KEY_ID }}
+      #     aws configure set aws_secret_access_key ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      #     aws configure set default.region us-east-1
 
-      - name: Verify AWS Credentials
-        run: aws sts get-caller-identity
+      # - name: Verify AWS Credentials
+      #   run: aws sts get-caller-identity
 
       - name: Terraform Init and Apply
         env:
